# scada-common

./: .cppcheck-suppressions  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json.template  FindScadaCommon.cmake  README.md  chromium_deps.md  features.py  features.txt  package-manifest.cmake  package.cmake  project.h  vcpkg.json
address_space/: CMakeLists.txt  README.md  address_space.h  address_space_impl.cpp  address_space_impl.h  address_space_impl2.cpp  address_space_impl2.h  address_space_impl3.cpp  address_space_impl3.h  address_space_type_system.h  address_space_uanodeset_unittest.cpp  address_space_util.cpp  address_space_util.h  address_space_util_unittest.cpp  address_space_xml.cpp  address_space_xml.h  address_space_xml_unittest.cpp  attribute_service_impl.cpp  attribute_service_impl.h  attribute_service_impl_unittest.cpp  data_variable.h  event_notifier.h  event_notifier_mock.h  fallback_node_factory.h  folder.h  generic_node_factory.cpp  generic_node_factory.h  local_attribute_service.cpp  local_attribute_service.h  local_history_service.cpp  local_history_service.h  local_method_service.cpp  local_method_service.h  local_monitored_item_service.cpp  local_monitored_item_service.h  local_node_management_service.cpp  local_node_management_service.h  local_services_unittest.cpp  local_session_service.cpp  local_session_service.h  (+55 more)
base/: CMakeLists.txt  any_executor_promise.h  awaitable_promise.h  boost_log_adapter.h  console_logger.h  file_logger.cpp  file_logger.h  fork_logger.h  format.cpp  format_time.cpp  io_context_util.h  logger.cpp  logger.h  metric.h  optional.h  promise.h  promise_executor.h  promise_util.h  scoped_observer.h  span.h  string_util.h  sync_logger.h  thread_executor.h  time_utils.cpp  time_utils.h  timed_cache.h  timer.h  utils.cpp  utils.h
common/: CMakeLists.txt  aggregation.cpp  aggregation.h  aliases.h  aliases_mock.h  audit.cpp  audit.h  audit_logger.h  audit_logger_impl.h  audit_unittest.cpp  base_node_model.cpp  base_node_model.h  browse_util.h  common_compat.h  common_paths.cpp  common_paths.h  coroutine_service_resolver.h  coroutine_session_proxy_notifier.h  coroutine_session_proxy_notifier_unittest.cpp  data_services_util.h  data_value_traits.h  data_value_util.h  dependency_graph_unittest.cpp  dummy_unittest.cpp  event_ack_queue.h  event_fetcher.cpp  event_fetcher.h  event_fetcher_builder.cpp  event_fetcher_notifier.h  event_manager.cpp  event_manager.h  event_notifier.h  event_notifier_mock.h  event_observer.h  event_set.h  event_storage.cpp  event_storage.h  file_system.h  format.cpp  format.h  (+95 more)
core/: CMakeLists.txt  aggregation.cpp  aggregation.h  attribute_ids.h  attribute_service.h  attribute_service_mock.h  basic_types.h  configuration_types.h  data_services_factory.cpp  data_services_factory.h  data_utils.h  data_value.h  date_time.cpp  date_time.h  debug_util.h  event.h  event_service.h  event_service_mock.h  expanded_node_id.h  extension_object.h  extension_object_unittest.cpp  history_service.h  history_types.h  localized_text.cpp  localized_text.h  method_service.h  method_service_mock.h  model_change_event.h  monitored_item.cpp  monitored_item.h  monitored_item_service.h  monitored_item_service_mock.h  namespaces.cpp  namespaces.h  node_attributes.h  node_class.h  node_id.cpp  node_id.h  node_id_unittest.cpp  node_id_util.cpp  (+19 more)
events/: CMakeLists.txt  event_ack_queue.cpp  event_ack_queue.h  event_ack_queue_unittest.cpp  event_fetcher.cpp  event_fetcher.h  event_fetcher_builder.cpp  event_fetcher_builder.h  event_fetcher_builder_unittest.cpp  event_fetcher_notifier.h  event_fetcher_unittest.cpp  event_notifier.h  event_notifier_mock.h  event_observer.h  event_set.h  event_storage.cpp  event_storage.h  node_event_provider.h  node_event_provider_mock.h  scada_events.cppm  view_events_subscription.h
net/: CMakeLists.txt  message_reader.h  message_transport.h  pipe_transport.h  queue_transport.h  serial_transport.h  session.cpp  session.h  session_message_reader.h  socket.cpp  socket.h  socket_pool.cpp  transport_string.cpp
node_service/: CMakeLists.txt  base_node_model.cpp  base_node_model.h  cached_node_service.h  fetch_queue.cpp  fetch_queue.h  fetching_node.cpp  fetching_node.h  fetching_node_graph.cpp  fetching_node_graph.h  mock_node_observer.h  node_awaitable.cpp  node_awaitable.h  node_children_fetcher.cpp  node_children_fetcher.h  node_children_fetcher_unittest.cpp  node_events.h  node_fetch_status.cpp  node_fetch_status.h  node_fetcher.h  node_fetcher_impl.cpp  node_fetcher_impl.h  node_fetcher_unittest.cpp  node_format.cpp  node_format.h  node_model.h  node_model_mock.h  node_observer.h  node_promises.cpp  node_promises.h  node_promises_unittest.cpp  node_ref.cpp  node_ref.h  node_ref_recursion_unittest.cpp  node_ref_unittest.cpp  node_service.h  node_service_factory.cpp  node_service_factory.h  node_service_factory_services.h  node_service_factory_unittest.cpp  (+10 more)
opc/: CMakeLists.txt  opc_address.cpp  opc_address.h  opc_compat.h  opc_convertions.cpp  opc_convertions.h  opc_convertions_unittest.cpp  opc_node_ids.cpp  opc_node_ids.h  opc_node_ids_unittest.cpp  opc_types.h  opc_util.h  variant_converter.cpp  variant_converter.h  variant_converter_unittest.cpp
opcua/: CLAUDE.md  CMakeLists.txt  client_channel.cpp  client_channel.h  client_connection.h  client_monitored_item.cpp  client_monitored_item.h  client_protocol_session.cpp  client_protocol_session.h  client_protocol_subscription.cpp  client_protocol_subscription.h  client_session.cpp  client_session.h  client_session_secure_unittest.cpp  client_session_unittest.cpp  client_subscription.cpp  client_subscription.h  compile.bat  compile_node_ids.py  discovery_client.cpp  discovery_client.h  discovery_client_unittest.cpp  endpoint_core.h  endpoint_core_unittest.cpp  endpoint_selection.cpp  endpoint_selection.h  endpoint_selection_unittest.cpp  endpoint_url.cpp  endpoint_url.h  message.h  model.xml  namespace_table.cpp  namespace_table.h  namespace_table_unittest.cpp  node_ids.csv  opcua_binary_codec_utils.cpp  opcua_binary_message.h  (+77 more)
(+646 files in other folders)
